--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "scheme": "ninjareact",
+    "scheme": "ninja-react",
     "name": "ninja_react_native",
     "slug": "ninja_react_native",
     "version": "1.0.0",
