--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "appwrite": "^20.0.0",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
